src/test/ui/consts/miri_unleashed/assoc_const_2.stderr
error[E0080]: erroneous constant used
  --> $DIR/assoc_const_2.rs:29:13
   |
LL |     let y = <String as Bar<String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
Future incompatibility report: Future breakage diagnostic:
warning: any use of this value will cause an error
  --> $DIR/assoc_const_2.rs:12:20
   |
LL |     const F: u32 = 100 / U::X;
   |     ------------   ^^^^^^^^^^ attempt to divide `100_u32` by zero
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
note: the lint level is defined here
  --> $DIR/assoc_const_2.rs:3:10
   |
LL | #![allow(const_err)]
   |          ^^^^^^^^^

